--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ langchain-together==0.2.0
 langchain==0.3.7
 langchain-community==0.3.5
 faiss-cpu==1.9.0
- chromadb-0.5.18
+chromadb==0.5.18
+colorlog==6.9.0
+langchain-chroma==0.1.4
