--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,19 @@ name = "hanzo"
 version = "0.1.0"
 description = "LLM Project testing"
 authors = [
-    {name="Alamsyah Hanza", email="alamhanz@gmail.com"},
+    {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"}
 ]
 dependencies = [
     "together==1.3.3",
     "python-dotenv==1.0.1",
-    "langchain-together==0.2.0",
-    "langchain==0.3.7",
-    "langchain-community==0.3.5",
-    "faiss-cpu==1.9.0",
-    "chromadb==0.5.18",
-    "colorlog==6.9.0",
-    "langchain-chroma==0.1.4",
-    "google-cloud-storage==2.18.2"
+    "langchain-together>=0.2.0,<0.3.0",
+    "langchain>=0.3.7,<0.4.0",
+    "langchain-community>=0.3.5,<0.4.0",
+    "faiss-cpu>=1.9.0,<2.0.0",
+    "chromadb>=0.5.18,<0.6.0",
+    "colorlog>=6.9.0,<7.0.0",
+    "langchain-chroma>=0.1.4,<0.2.0",
+    "google-cloud-storage>=2.18.2,<3.0.0"
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -23,8 +23,12 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent"
 ]
-requires-python = ">=3.10.*"
+requires-python = ">=3.10"
 readme = "README.md"
+keywords = ["LLM", "AI", "machine learning"]
+urls = {
+    "Homepage" = "alamhanz.xyz"
+}
 
 [tool.setuptools.packages.find]
 where = ["main"]
