--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ requires-python = ">=3.10"
 readme = "README.md"
 keywords = ["LLM", "AI", "machine learning"]
 urls = {
-    "Homepage" = "alamhanz.xyz"
+    "Homepage" = "https://alamhanz.xyz"
 }
 
 [tool.setuptools.packages.find]
