--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,7 @@ classifiers = [
 requires-python = ">=3.10"
 readme = "README.md"
 keywords = ["LLM", "AI", "machine learning"]
-urls = {
-    "Homepage" = "https://alamhanz.xyz"
-}
+urls = {"Homepage" = "https://alamhanz.xyz"}
 
 [tool.setuptools.packages.find]
 where = ["main"]
