--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ authors = [
 dependencies = [
     "together==1.3.3",
     "python-dotenv==1.0.1",
-    "langchain-together>=0.2.0,<0.3.0",
-    "langchain>=0.3.7,<0.4.0",
-    "langchain-community>=0.3.5,<0.4.0",
-    "faiss-cpu>=1.9.0,<2.0.0",
-    "chromadb>=0.5.18,<0.6.0",
-    "colorlog>=6.9.0,<7.0.0",
-    "langchain-chroma>=0.1.4,<0.2.0",
-    "google-cloud-storage>=2.18.2,<3.0.0"
+    "langchain-together==0.2.0",
+    "langchain==0.3.7",
+    "langchain-community==0.3.5",
+    "faiss-cpu==1.9.0",
+    "chromadb==0.5.18",
+    "colorlog==6.9.0",
+    "langchain-chroma==0.1.4",
+    "google-cloud-storage==2.18.2"
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -29,7 +29,7 @@ keywords = ["LLM", "AI", "machine learning"]
 urls = {"Homepage" = "https://alamhanz.xyz"}
 
 [tool.setuptools.packages.find]
-where = ["main"]
+where = ["hanzo"]
 
 [tool.pdm]
 distribution = false
