--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "hanzo"
-dynamic = ["version"]
+version = "0.1.2"
 description = "LLM Project testing"
 authors = [
     {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"}
