--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "hanzo"
-version = "0.2.8"
+version = "0.2.9"
 description = "LLM Project testing"
 authors = [
     {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"}
@@ -21,7 +21,8 @@ dependencies = [
     "chromadb==0.5.18",
     "colorlog==6.9.0",
     "langchain-chroma==0.1.4",
-    "google-cloud-storage==2.18.2"
+    "google-cloud-storage==2.18.2",
+    "httpx==0.27.2"
 ]
 license = {text = "MIT"}
 classifiers = [
