--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@ isolated_build = True
 deps = 
     pylint > 2.17
     black > 23
-    -r requirements.txt
 commands =
+    pip install pdm
+    pdm install
     pylint hanzo
     black --check hanzo
