--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,23 +4,19 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "hanzo"
-version = "0.2.10"
-description = "LLM Sandbox for bot."
+version = "0.3.0"
+description = "LLM Sandbox for personal use."
 authors = [
     {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"},
     {name = "alamhanz", email = "alamhanz@gmail.com"},
 ]
 dependencies = [
-    "together==1.3.3",
-    "langchain==0.3.7",
-    "faiss-cpu==1.9.0",
-    "chromadb==0.5.18",
-    "httpx==0.27.2",
-    "langchain-community>=0.3.7",
+    "together==1.5.3",
+    "crewai>=0.108.0",
+    "langchain-chroma>=0.2.2",
+    "langchain-community>=0.3.20",
     "langchain-together>=0.3.0",
-    "color-log>=1.0.9",
-    "python-dotenv==1.0.1",
-    "langchain-chroma>=0.2.1"
+    "colorlog>=6.9.0"
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -28,7 +24,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent"
 ]
-requires-python = ">=3.11"
+requires-python = "<3.13,>=3.10"
 readme = "README.md"
 keywords = ["LLM", "AI", "machine learning"]
 urls = {"Homepage" = "https://alamhanz.xyz"}
